[ITB-1178] Tooltip alignment and wrapping fix

--- a/gitb-ui/ui/src/app/components/test-status-icons/test-status-icons.component.less
+++ b/gitb-ui/ui/src/app/components/test-status-icons/test-status-icons.component.less
@@ -36,7 +36,7 @@
     }
 }
 ::ng-deep {
-    .tooltip-inner {
+    .status-icon-tooltip .tooltip-inner {
         min-width: auto !important;
         max-width: inherit !important;
         white-space: nowrap;
